# furyrenderer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
examples/: App.cpp  App.h
examples/DepthBuffer/: CMakeLists.txt  DepthBuffer.cpp  fragment.glsl  fragment.spv  vertex.glsl  vertex.spv
examples/HelloTriangle/: App.cpp  App.h  CMakeLists.txt  HelloTriangle.cpp  buildShaders.bat  vertex.glsl
examples/Rendering/: CMakeLists.txt  Rendering.cpp  fragment.glsl  fragment.spv  vertex.glsl  vertex.spv
examples/Rendering/Sponza/glTF/: Material_0.001.emat  Material_1.001.emat  Material_10.001.emat  Material_11.001.emat  Material_12.001.emat  Material_13.001.emat  Material_14.001.emat  Material_15.001.emat  Material_16.001.emat  Material_17.001.emat  Material_18.001.emat  Material_19.001.emat  Material_2.001.emat  Material_20.001.emat  Material_21.001.emat  Material_22.001.emat  Material_23.001.emat  Material_24.001.emat  Material_3.001.emat  Material_4.001.emat  Material_5.001.emat  Material_6.001.emat  Material_7.001.emat  Material_8.001.emat  Material_9.001.emat  Mesh_0.025.emod  Mesh_0.027.emod  Mesh_0.028.emod  Mesh_0.029.emod  Mesh_0.030.emod  Mesh_0.031.emod  Mesh_0.032.emod  Mesh_0.033.emod  Mesh_0.034.emod  Mesh_0.035.emod  Mesh_0.036.emod  Mesh_0.038.emod  Mesh_0.039.emod  Mesh_0.040.emod  Mesh_0.041.emod  (+10 more)
examples/SpinningTriangle/: CMakeLists.txt  SpinningTriangle.cpp  vertex.glsl  vertex.spv
examples/TexturedQuad/: CMakeLists.txt  TexturedQuad.cpp  fragment.glsl  fragment.spv  graph.dot  vertex.glsl  vertex.spv
include/: IContext.h  main.cpp
include/backend/vulkan/: VulkanContextFactory.h
src/: AtomicCounter.h  DescriptorPool.cpp  DescriptorPool.h  RICacheMap.h  RIComponents.cpp  RIComponents.h  RIContextVk.cpp  RIContextVk.h  RIContextVk.inl  RIContextVulkan.h  RICoreVk.cpp  RICoreVk.h  RICoreVk.inl  RIFactoryVk.cpp  RIFactoryVk.h  RIFactoryVk.inl  RIResource.h  ResourceId.h  ResourceTransfer.cpp  ResourceTransfer.h  RingBufferManager.h  SwapchainInfo.h  UtilsVK.h  VertexBuffersManager.cpp  VertexBuffersManager.h  asserts.h
src/backend/vulkan/: ResourceTransfer.cpp  ResourceTransfer.h  UtilsVK.h  VulkanContext.cpp  VulkanContext.h  VulkanContextFactory.cpp  VulkanDevice.cpp  VulkanDevice.h  VulkanDevice10.cpp  VulkanDevice10.h  VulkanDevice11.cpp  VulkanDevice11.h  VulkanDevice12.cpp  VulkanDevice12.h  VulkanDevice13.cpp  VulkanDevice13.h  VulkanDevice2.cpp  VulkanDevice2.h  VulkanDevice3.cpp  VulkanDevice3.h  VulkanDevice4.cpp  VulkanDevice4.h  VulkanDevice5.cpp  VulkanDevice5.h  VulkanDevice6.cpp  VulkanDevice6.h  VulkanDevice7.cpp  VulkanDevice7.h  VulkanDevice8.cpp  VulkanDevice8.h  VulkanDevice9.cpp  VulkanDevice9.h  VulkanInstance.cpp  VulkanInstance.h
tests/: CMakeLists.txt  main.cpp
tests/integration/vulkan/: AcquireAndRelease.test.cpp  ContextCreationDestruction.test.cpp  ImageUpload.test.cpp  SwapchainCreationDestruction.test.cpp  UniformBufferUpload.test.cpp  VertexBufferCreationDestruction.test.cpp  VertexBufferUpload.test.cpp
tests/unit/: RICacheMap.test.cpp  RingBufferManager.test.cpp
tests/unit/vulkan/: RIRenderPassAttachmentsConversion.test.cpp  RenderPassCaching.test.cpp  VkUtils.test.cpp
tests/utilities/: ExtractBuffer.h  ExtractImage.h  WindowFixture.h
